--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          region: eu-east-1
+          region: us-east-1
           application_name: multi-docker
           environment_name: MultiDocker-env
           version_label: ${{github.sha}}
